feat(ui): update Storybook configuration and add custom theme for better UI documentation chore(ui): clean up input and select story files by removing unused code fix(ui): add missing logo image for branding in Storybook chore(ui): update package.json to include @storybook/manager-api dependency

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "npm run coverage -w=ui",
     "dev": "npm run storybook -w=ui",
     "build": "npm run build-storybook -w=ui",
-    "serve": "npx http-server ./packages/ui/storybook-static",
-    "start": "node ./packages/ui/storybook-static"
+    "serve": "npx http-server ./packages/ui/storybook-static"
   },
   "keywords": [],
   "author": "",
