--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm ci
 
       - name: Run unit tests with coverage
-        run: npm test -- --coverage --run
+        run: npm test 
 
   build:
     runs-on: ubuntu-latest
