--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "npm run storybook -w=ui",
     "build": "npm run build --workspaces",
     "serve": "npx http-server ./packages/ui/storybook-static",
-    "publish-cli": "npm publish --workspace=@jeffnts/ui-startkit"
+    "publish-cli": "npm publish -w=cli"
   },
   "keywords": [],
   "author": "",
