chore(package.json): update publish-cli command to publish @jeffnts/ui-startkit instead of cli chore(cli/package.json): rename package from cli to @jeffnts/ui-startkit and update version to 0.0.2 chore(cli/package.json): update repository URL to reflect new ownership on GitHub

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cli",
-  "version": "0.0.1",
+  "name": "@jeffnts/ui-startkit",
+  "version": "0.0.2",
   "description": "Adicione componentes reutilizáveis ao seu projeto",
   "type": "module",
   "main": "dist/index.js",
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/roxygens/ui-startkit.git"
+    "url": "git+https://github.com/jeffnts/ui-startkit.git"
   },
   "dependencies": {
     "commander": "^14.0.0",
