--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,7 +13,7 @@
     "build": "tsup src/index.ts --format esm,cjs --dts"
   },
   "bin": {
-    "ui-startkit": "./dist/index.cjs"
+    "ui-startkit": "./dist/index.js"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
