build(cli): update build script to include clean, esbuild target, and legacy output options for better compatibility and output management

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -10,7 +10,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts"
+    "build": "tsup src/index.ts --format esm,cjs --dts --clean --esbuild-target=node18 --legacy-output"
   },
   "bin": {
     "ui-startkit": "./dist/index.cjs"
