fix(cli): downgrade version from 0.0.7 to 0.0.6 to reflect correct release fix(cli): update build script to use CommonJS format for compatibility fix(cli): change module and moduleResolution to CommonJS for consistency

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jeffnts/ui-startkit",
-  "version": "0.0.7",
+  "version": "0.0.6",
   "description": "Adicione componentes reutilizáveis ao seu projeto",
   "type": "module",
   "main": "dist/index.js",
@@ -10,7 +10,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts --clean --target node18 --legacy-output"
+    "build": "tsup src/index.ts --format cjs --dts --clean"
   },
   "bin": {
     "ui-startkit": "./dist/index.cjs"
