--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "commander": "^14.0.0",
+    "dotenv": "^17.2.1",
     "execa": "^9.6.0",
     "fs-extra": "^11.3.1",
     "node-fetch": "^3.3.2",
