--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,6 +28,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
