--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev": "npm run storybook -w=ui",
     "build": "npm run build --workspaces",
     "serve": "npx http-server ./packages/ui/storybook-static",
-    "build-cli": "npm run build -w=@roxygens/ui-startkit",
-    "publish-cli": "npm publish -w=@roxygens/ui-startkit"
+    "build-cli": "npm run build -w=ui-startkit",
+    "publish-cli": "npm publish -w=ui-startkit"
   },
   "keywords": [],
   "author": "",
