chore(publish.yml): update job name from "Publish CLI to GitHub Packages" to "Publish CLI to NPM Packages" for clarity on the publishing target

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Build CLI
         run: npm run build-cli
 
-      - name: Publish CLI to GitHub Packages
+      - name: Publish CLI to NPM Packages
         run: npm run publish-cli
