feat(docs): add list command to README for better component management chore(docs): remove outdated CLI README file to streamline documentation
chore(cli): remove outdated Portuguese README file to streamline documentation
feat(cli): add script to copy README files to CLI distribution for better accessibility
feat(registry): add List component to the registry with necessary files and dependencies

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -9,7 +9,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format cjs --dts --clean --external chalk --external ora --external prompts --external node-fetch --external execa --external fs-extra && node src/scripts/copy-css.js"
+    "build": "tsup src/index.ts --format cjs --dts --clean --external chalk --external ora --external prompts --external node-fetch --external execa --external fs-extra && node src/scripts/copy-css.js && node src/scripts/copy-readme.js"
   },
   "bin": {
     "ui-startkit": "./dist/index.js"
